# godot_openxr_vendors

./: .gitattributes  .gitignore  .gitmodules  CHANGES.md  CONTRIBUTORS.md  GodotOpenXRMeta.gdap  LICENSE  README.md  SConstruct  build.gradle  build_raw_headers.py  config.gradle  gdformatrc  settings.gradle
common/: CMakeLists.txt  build.gradle  common.cmake
common/src/main/cpp/: register_types.cpp  util.cpp  util.h
common/src/main/cpp/classes/: android_surface_layer.cpp  openxr_fb_hand_tracking_capsules.cpp  openxr_fb_hand_tracking_mesh.cpp  openxr_fb_passthrough_geometry.cpp  openxr_fb_scene_manager.cpp  openxr_fb_spatial_anchor_manager.cpp  openxr_fb_spatial_entity.cpp  openxr_fb_spatial_entity_batch.cpp  openxr_fb_spatial_entity_query.cpp  openxr_fb_spatial_entity_user.cpp  openxr_meta_passthrough_color_lut.cpp
common/src/main/cpp/export/: export_plugin.cpp  export_plugin.h  khronos_export_plugin.cpp  khronos_export_plugin.h  lynx_export_plugin.h  meta_export_plugin.cpp  pico_export_plugin.cpp  pico_export_plugin.h
common/src/main/cpp/extensions/: openxr_fb_body_tracking_extension_wrapper.cpp  openxr_fb_composition_layer_alpha_blend_extension_wrapper.cpp  openxr_fb_composition_layer_settings_extension_wrapper.cpp  openxr_fb_face_tracking_extension_wrapper.cpp  openxr_fb_hand_tracking_aim_extension_wrapper.cpp  openxr_fb_hand_tracking_capsules_extension_wrapper.cpp  openxr_fb_hand_tracking_mesh_extension_wrapper.cpp  openxr_fb_passthrough_extension_wrapper.cpp  openxr_fb_render_model_extension_wrapper.cpp  openxr_fb_scene_capture_extension_wrapper.cpp  openxr_fb_scene_extension_wrapper.cpp  openxr_fb_spatial_entity_container_extension_wrapper.cpp  openxr_fb_spatial_entity_extension_wrapper.cpp  openxr_fb_spatial_entity_query_extension_wrapper.cpp  openxr_fb_spatial_entity_sharing_extension_wrapper.cpp  openxr_fb_spatial_entity_storage_extension_wrapper.cpp  openxr_fb_spatial_entity_user_extension_wrapper.cpp  openxr_htc_facial_tracking_extension_wrapper.cpp  openxr_htc_passthrough_extension_wrapper.cpp  openxr_khr_android_surface_swapchain_extension_wrapper.cpp
common/src/main/cpp/include/: util.h
common/src/main/cpp/utils/: xr_godot_utils.cpp
demo/: .gitignore  main.gd  (+23 more)
godotopenxrlynx/: CMakeLists.txt  NOTICE.txt  README.md  SConstruct  build.gradle
godotopenxrlynx/src/main/: AndroidManifest.xml
godotopenxrlynx/src/main/cpp/: register_types.cpp  register_types.h
godotopenxrlynx/src/main/cpp/export/: lynx_export_plugin.cpp  lynx_export_plugin.h
godotopenxrlynx/src/main/jniLibs/arm64-v8a/: abi.json
godotopenxrmeta/: CMakeLists.txt  README.md  SConstruct  build.gradle
godotopenxrmeta/src/main/: AndroidManifest.xml
godotopenxrmeta/src/main/cpp/: openxr_fb_face_tracking_extension_wrapper.cpp  openxr_fb_scene_capture_extension_wrapper.cpp  openxr_fb_scene_extension_wrapper.cpp  register_types.cpp  register_types.h  util.h
godotopenxrmeta/src/main/cpp/export/: meta_export_plugin.cpp  meta_export_plugin.h
godotopenxrmeta/src/main/cpp/include/: openxr_fb_scene_capture_extension_wrapper.h  openxr_fb_scene_extension_wrapper.h  openxr_fb_spatial_entity_container_extension_wrapper.h  openxr_fb_spatial_entity_extension_wrapper.h  openxr_fb_spatial_entity_query_extension_wrapper.h
godotopenxrmeta/src/main/jniLibs/arm64-v8a/: README.md
plugin/: CMakeLists.txt  build.gradle
plugin/src/android/: AndroidManifest.xml  android.cmake
plugin/src/khronos/: AndroidManifest.xml  khronos.cmake
plugin/src/lynx/: AndroidManifest.xml  lynx.cmake
plugin/src/magicleap/: AndroidManifest.xml  magicleap.cmake
plugin/src/main/: AndroidManifest.xml  common.cmake
plugin/src/main/cpp/: editor_debugger_plugin.cpp  editor_plugin.cpp  openxr_android_xrs_utils.cpp  register_types.cpp  register_types.cpp.orig  util.cpp
plugin/src/main/cpp/classes/: openxr_android_anchor_tracker.cpp  openxr_android_environment_depth.cpp  openxr_android_hit_result.cpp  openxr_android_light_estimation.cpp  openxr_android_scene_meshing.cpp  openxr_android_scene_submesh_data.cpp  openxr_android_trackable_object_tracker.cpp  openxr_android_trackable_plane_tracker.cpp  openxr_android_trackable_tracker.cpp  openxr_fb_hand_tracking_mesh.cpp  openxr_fb_passthrough_geometry.cpp  openxr_fb_render_model.cpp  openxr_fb_scene_manager.cpp  openxr_fb_spatial_anchor_manager.cpp  openxr_fb_spatial_entity.cpp  openxr_fb_spatial_entity_batch.cpp  openxr_fb_spatial_entity_query.cpp  openxr_fb_spatial_entity_user.cpp  openxr_hybrid_app.cpp  openxr_meta_environment_depth.cpp  openxr_meta_passthrough_color_lut.cpp  openxr_ml_marker_data.cpp  openxr_ml_marker_detector.cpp  openxr_ml_marker_detector_april_tag_settings.cpp  openxr_ml_marker_detector_aruco_settings.cpp  openxr_ml_marker_detector_code_128_settings.cpp  openxr_ml_marker_detector_ean_13_settings.cpp  openxr_ml_marker_detector_profile_settings.cpp  openxr_ml_marker_detector_qr_settings.cpp  openxr_ml_marker_detector_settings.cpp  openxr_ml_marker_detector_upc_a_settings.cpp  openxr_ml_marker_tracker.cpp  openxr_ml_marker_understanding_manager.cpp  openxr_vendor_performance_metrics.cpp
plugin/src/main/cpp/editor/: xr_project_setup_dialog.cpp
plugin/src/main/cpp/export/: android_export_plugin.cpp  android_xr_export_plugin.cpp  export_plugin.cpp  khronos_export_plugin.cpp  lynx_export_plugin.cpp  magicleap_export_plugin.cpp  meta_export_plugin.cpp  pico_export_plugin.cpp  validation_layers_export_plugin.cpp
plugin/src/main/cpp/extensions/: openxr_android_device_anchor_persistence_extension.cpp  openxr_android_enumerate_system_extension_properties_extension.cpp  openxr_android_environment_depth_extension.cpp  openxr_android_environment_depth_extension_wrapper.cpp  openxr_android_eye_tracking_extension.cpp  openxr_android_eye_tracking_extension_wrapper.cpp  openxr_android_face_tracking_extension.cpp  openxr_android_face_tracking_extension_wrapper.cpp  openxr_android_light_estimation_extension.cpp  openxr_android_light_estimation_extension_wrapper.cpp  (+91 more)
plugin/src/meta/: AndroidManifest.xml  meta.cmake
plugin/src/pico/: AndroidManifest.xml  pico.cmake
(+969 files in other folders)
